# autonime

./: Makefile  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: devcontainer.json
core/: .env.example  settings.py
docker/python/: Dockerfile
src/: .env.example  settings.py
src/app/: settings.py  urls.py
