[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Renato Fernandes <wathergeen@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.7"
python-decouple = "^3.8"
mysqlclient = "^2.2.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
